# shoot-em-rhythm

./: README.md  shoot-em-rhythm.sh  test
art/: flyinghamster.xcf  greenstrip.xcf  hp.xcf  lasers.xcf  numbers.xcf  power.xcf  selfsprite.xcf  selftile.xcf  swords.xcf
buildscripts/: create_structdef_py.sh  get_all_mods.sh
cfg/: animations.cfg  imgs.cfg  level.cfg  modules.cfg  pause.cfg
scripts/: pythonhelper.py  structdef.py
sounds/: hurtsound.aup  pew.aup  pew2.aup  pew3.aup  whoosh.aup
sounds/hurtsound_data/e00/d00/: e00001b7.au  e00002dc.au  e00002f0.au  e0000323.au  e0000366.au  e000037f.au  e0000417.au  e0000493.au  e00004b6.au  e0000ab9.au  e0000ac7.au  e0000ae6.au  e0000d68.au
sounds/pew2_data/e00/d00/: e000030a.au  e00003b8.au  e0000656.au  e0000a38.au  e0000afd.au  e0000c1d.au  e0000c96.au  e0000ca0.au
sounds/pew3_data/e00/d00/: e0000240.au  e000029e.au  e0000b19.au  e0000f90.au
sounds/pew_data/e00/d00/: e000034a.au  e000081e.au  e0000995.au  e0000a73.au
sounds/whoosh_data/e00/d01/: e00011ae.au  e0001570.au  e00016f7.au  e0001915.au  e0001bec.au  e0001c06.au  e0001d5e.au  e0001d9c.au
src/: TODO  animate.c  animate.h  animations.cfg  clock.c  clock.h  corruptionoutput.txt  deprecated_funcs.c  deprecated_funcs.h  dict.c  dict.h  harmonair  helpers.c  helpers.h  imgs.cfg  level.c  level.cbkp  level.cfg  level.h  level_non_rhythm.c  main.c  main.h  main.h.save  makefile  makefilebkp  menuideas.txt  meson.build  meson_options.txt  music.c  music.h  myfunc.mod.c  newstruct.c  newstruct.h  object_logic.c  object_logic.h  pause.c  pythonhelper.py  rdtsc.c  shoot-em-rhythm  spawn.c  (+9 more)
src/engine/: animate.c  audio.c  clock.c  dict.c  helpers.c  meson.build  opengl_funcs.c  sdl_funcs.c  structure.c
src/engine/include/: animate.h  audio.h  backend_funcs.h  backend_types.h  clock.h  dict.h  helpers.h  music.h  opengl_funcs.h  opengl_types.h  sdl_funcs.h  sdl_types.h  structdef_engine.h  structure.h
src/game/: level.c  main.c  meson.build  object_logic.c  pause.c  spawn.c  startscreen.c  transform.c
src/game/include/: level.h  main.h  object_logic.h  pause.h  spawn.h  structdef_game.h  transform.h
src/include/: animate.h  audio.h  dict.h  helpers.h  main.h  object_logic.h  spawn.h  structdef.h  structure.h  transform.h
src/modules/: myfunc.mod.c
